force-app/main/default/objects/Integration_Configuration__c/Integration_Configuration__c.object-meta.xml
<CustomObject>
    <label>Integration Configuration</label>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>Integration Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>