force-app/main/default/objects/Integration_Configuration__c/fields/APIEndpoint__c.field-meta.xml
<CustomField>
    <fullName>APIEndpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>APIEndpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>