force-app/main/default/objects/Integration_Configuration__c/fields/Autho__c.field-meta.xml
<CustomField>
    <fullName>Autho__c</fullName>
    <label>Authorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOAUTH</fullName>
            </value>
            <value>
                <fullName>BASIC</fullName>
            </value>
            <value>
                <fullName>OAuth2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>