force-app/main/default/objects/Integration_Configuration__c/fields/Consumersecret__c.field-meta.xml
<CustomField>
    <fullName>Consumersecret__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumersecret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>