force-app/main/default/objects/Integration_Configuration__c/fields/redirecturl__c.field-meta.xml
<CustomField>
    <fullName>redirecturl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>redirecturl</label>
    <required>true</required>
    <type>Url</type>
</CustomField>